--- a/KiTab.csproj
+++ b/KiTab.csproj
@@ -18,5 +18,6 @@
 		<PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.2" />
 		<!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
 		<PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.2" />
+		<PackageReference Include="PdfLibCore" Version="2.5.0" />
 	</ItemGroup>
 </Project>
